blocks/footer/footer.css
footer {
  position: relative;
  background-color: var(--background-color);
  font-size: var(--body-font-size-s);
  border-top: 1px solid #fff;
}

footer .default-content-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  box-sizing: border-box;
  width: 100%;
  padding: 24px 24px 100px;
}

footer .footer p {
  margin: 0;
  color: #fff;
}

footer .footer img {
  width: 34px;
  height: auto;
}

footer .footer a:any-link {
  color: #fff;
  text-decoration: none;
  transition: color 0.2s ease;
}

footer .footer a:hover {
  color: var(--text-color);
}

@media (width >= 900px) {
  footer .default-content-wrapper {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 16px;
    padding: 24px 32px 100px;
  }

  /* Push links to the right */
  footer .default-content-wrapper > p:last-child {
    margin-left: auto;
  }
}

